@@ -44,11 +44,10 @@ queries in in-addr.arpa and ip6.arpa subdomains.
 sub new {
 	my $class = shift;
 
-	my $qname = shift;
+	my $qname = defined ($_ = shift) ? $_ : '';
 	my $qtype = uc shift || 'A';
 	my $qclass = uc shift || 'IN';
 
-	$qname = '' unless defined $qname;	# || ''; is NOT same!
 	$qname =~ s/\.+$//o;	# strip gratuitous trailing dot
 
  	# Check if the caller has the type and class reversed.
@@ -58,10 +57,9 @@ sub new {
 		and exists $Net::DNS::typesbyname{$qclass};
 
 	# if argument is an IP address, do appropriate reverse lookup
-	my $reverse = dns_addr($qname) if $qname =~ m/\d$|[:\/]/o;
-	if ( $reverse ) {
-		$qname = $reverse;
-		$qtype = 'PTR' if $qtype =~ m/^(A|AAAA)$/o;
+	if ( $qname =~ m/\d$|[:\/]/o ) {
+		my $type = $qtype =~ m/^(A|AAAA)$/o ? 'PTR' : $qtype;
+		($qname, $qtype) = ($_, $type) if $_ = dns_addr($qname);
 	}
 
 	my $self = {	qname	=> $qname,
@@ -79,8 +77,7 @@ sub dns_addr {
 	# If arg looks like IP4 address then map to in-addr.arpa space
 	if ( $arg =~ /((^|\d+\.)+\d+)($|\/(\d*))/o ) {
 		my @parse = split /\./, $1;
-		my $prefx = $4 || @parse<<3;
-		my $last = $prefx > 24 ? 3 : ($prefx-1)>>3;
+		my $last = ($_ = ($4 || @parse<<3)) > 24 ? 3 : ($_-1)>>3;
 		return join '.', reverse( (@parse,(0)x3)[0 .. $last] ), 'in-addr.arpa';
 	}
 
@@ -88,9 +85,12 @@ sub dns_addr {
 	if ( $arg =~ /^((\w*:)+)(\w*)($|\/(\d*))/o ) {
 		my @parse = split /:/, (reverse "0${1}0${3}"), 9;
 		my @xpand = map{/^$/ ? ('0')x(9-@parse) : $_} @parse;
-		my $prefx = $5 || @xpand<<4;
 		my $hex = pack 'A4'x8, map{$_.'000'} ('0')x(8-@xpand), @xpand;
-		my $len = $prefx > 124 ? 32 : ($prefx+3)>>2;
+
+		# $5 is the bit in the argument that maps to the prefix length
+		# When not available then the number of elements in the expand
+		# array reflectst the prefix length (hex to bit conversion)
+		my $len = ($_ = ($5 || @xpand<<4)) > 124 ? 32 : ($_+3)>>2;
 		return join '.', split(//, substr($hex,-$len) ), 'ip6.arpa';
 	}
 
